# sample-data-validator

./: .gitignore  README.md  alembic.ini  database.py  helper_file.py  main.py  models.py  pyproject.toml  requirements.txt  schema.py  te.py  testt.py
.github/workflows/: azure-static-web-apps-gentle-sea-027f0db1e.yml  azure-static-web-apps-lemon-river-0bb6a2a1e.yml  azure-static-web-apps-yellow-mushroom-05a96641e.yml  main_pythonwebapp.yml  main_successpython.yml
constants/: crm_table_constants.py  rialto_table_constants.py  ship_method.py
controllers/: netsuite_controller.py
model/: contract.py
services/: mail_service.py
static/: styles.css
templates/: login.html  upload.html  upload_home.html
uploads/: Bill To_End User Load 2 Map 2.xlsx  Fields Customer mapping .xlsx  Zenia Graph - October-2024.xlsx  data.xlsx
